--- a/localisation/replace/english/state_names_overrides_l_english.yml
+++ b/localisation/replace/english/state_names_overrides_l_english.yml
@@ -503,7 +503,7 @@
  STATE_502:0 "STATE_502"
  STATE_503:0 "STATE_503"
  STATE_504:0 "STATE_504"
- STATE_505:0 "STATE_505"
+ STATE_505:0 "Crystal City"
  STATE_506:0 "STATE_506"
  STATE_507:0 "STATE_507"
  STATE_508:0 "STATE_508"
@@ -645,7 +645,7 @@
  STATE_644:0 "STATE_644"
  STATE_645:0 "STATE_645"
  STATE_646:0 "East Ponytown"
- STATE_647:0 "STATE_647"
+ STATE_647:0 "Buckmington"
  STATE_648:0 "STATE_648"
  STATE_649:0 "West Ponytown"
  STATE_650:0 "STATE_650"
@@ -664,7 +664,7 @@
  STATE_663:0 "STATE_663"
  STATE_664:0 "Rubrum"
  STATE_665:0 "STATE_665"
- STATE_666:0 "Crystal City"
+ STATE_666:0 "Crystal Castle"
  STATE_667:0 "STATE_667"
  STATE_668:0 "STATE_668"
  STATE_669:0 "STATE_669"
@@ -747,7 +747,7 @@
  STATE_746:0 "Ponchiki"
  STATE_747:0 "STATE_747"
  STATE_748:0 "Baical"
- STATE_749:0 "STATE_749"
+ STATE_749:0 "Klykovo"
  STATE_750:0 "Mirazh"
  STATE_751:0 "STATE_751"
  STATE_752:0 "Bordo"
