--- a/localisation/russian/country_SEV_l_russian.yml
+++ b/localisation/russian/country_SEV_l_russian.yml
@@ -72,6 +72,7 @@ severiana.4.a:0 "\"Шпигель, ты маленький...\""
 severiana.5.t:0 "WIP"
 severiana.5.d:0 "WIP"
 severiana.5.a:0 "WIP"
+severiana.5.b:0 "WIP"
 
 severiana.6.t:0 "WIP"
 severiana.6.d:0 "WIP"
