--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -56,6 +56,10 @@ VICTORY_POINTS_12818:0 "Лингл" #Lingle / STATE_577
 VICTORY_POINTS_12778:0 "Споттед Кау" #Spotted Cow / STATE_578
 #LUN - Princess Luna
 VICTORY_POINTS_13240:0 "Северный Кантерлотский Дворец" #North Canterlot Palace / STATE_1099
+#NGF - Neighgara Falls
+
+#TRS - Trotsylvania
+
 #######################################################################
 # Governorate Whinnyapolis ############################################
 #######################################################################
